Actions
Bug #10610
closedlog: NULL pointer errors
Start date:
2019-03-30
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Errors from NULL pointer build:
In file included from ../../common/sys/param.h:48:0, from ../../common/io/log.c:32: ../../common/io/log.c: In function 'log_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/log.c:76:31: note: in expansion of macro 'NULL' LOG_CONSMIN, DDI_PSEUDO, NULL) == DDI_FAILURE || ^~~~ In file included from ../../common/io/log.c:51:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ In file included from ../../common/sys/param.h:48:0, from ../../common/io/log.c:32: ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/log.c:78:30: note: in expansion of macro 'NULL' LOG_LOGMIN, DDI_PSEUDO, NULL) == DDI_FAILURE) { ^~~~ In file included from ../../common/io/log.c:51:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1c509b8ac837d66b6d4910e4a57328737eb23fce
commit 1c509b8ac837d66b6d4910e4a57328737eb23fce Author: Toomas Soome <tsoome@me.com> Date: 2019-04-02T05:39:15.000Z 10610 log: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions